# python-sfml

./: .gitignore  .gitmodules  .hgignore  LICENSE  LICENSE.txt  MANIFEST.in  README  README.md  README.rst  README.txt  decl.pxd  declaudio.pxd  declevent.pxd  declhacks.pxd  decljoy.pxd  declkey.pxd  declmouse.pxd  declprimitive.pxd  declstyle.pxd  hacks.cpp  hacks.hpp  pyproject.toml  runtests.py  setup.py  setup3k.py  sf.cpp  sf.pyx
.github/scripts/: FindOpenAL.cmake  build-sfml-unix.sh  build-sfml-windows.ps1  run-wheel-tests.py  test-installed-package.py  validate-dist.py
.github/workflows/: ci.yml  python-package-macos.yml  python-package-ubuntu.yml  python-package-windows.yml  pythonpackage.yml  release.yml  testpypi-validation.yml
doc/: make.bat
doc/source/: add-ons.rst  addons.rst  api_reference.rst  c_api.rst  changelog.rst  conf.py  download.rst  examples.rst  future_tutorials.rst  gettingstarted.rst  index.rst  introduction.rst  todo.rst  tutorials.rst  whatsnew.rst
doc/sphinx/: Makefile  make.bat
docs/: audio-module.md  compatibility.md  getting-started.md  graphics-module.md  modules.md  network-module.md  recipes.md  system-module.md  window-module.md
examples/: CREDITS.txt  README.md  blur.sfx  events.py  image.py  pixels.py  renderimage.py  shader.py  shape.py  sprite.py  text.py  videomode.py
examples/embedding/: main.cpp  script.py
examples/event_handling/: event_handling.py
examples/extending/: extension.pyx  extension.pyxbld  main.py
include/: blendmode.pxd  daudio.pxd  derivabledrawable.hpp  derivablesoundrecorder.hpp  derivablesoundstream.hpp  derivablewindow.hpp  dgraphics.pxd  dnetwork.pxd  dsystem.pxd  dwindow.pxd  dx11.pxd  error.hpp  font.pxd  ftp.pxd  ipaddress.pxd  joystick.pxd  keyboard.pxd  listener.pxd  mouse.pxd  primitivetype.pxd  renderstates.pxd  shader.pxd  socket.pxd  soundrecorder.pxd  style.pxd  text.pxd  texture.pxd  videomode.pxd
sfml/: __init__.py
tests/: main.py  runtests.py  test_audio_module.py  test_graphics_module.py  test_graphics_xvfb.py  test_network_module.py  test_smoke_imports.py  test_system_module.py  test_typing_artifacts.py  test_window_module.py  test_window_xvfb.py
(+574 files in other folders)
